force-app/main/default/objects/pstar__Preference_Option__c/pstar__Preference_Option__c.object-meta.xml
<CustomObject>
    <label>Preference Option</label>
    <nameField>
        <label>Preference Option Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Preference Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>