force-app/main/default/objects/pstar__Preference_Option__c/fields/pstar__AutoNum__c.field-meta.xml
<CustomField>
    <fullName>pstar__AutoNum__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <label>AutoNum</label>
    <type>AutoNumber</type>
</CustomField>