force-app/main/default/objects/pstar__Preference_Option__c/fields/pstar__Dealbreaker__c.field-meta.xml
<CustomField>
    <fullName>pstar__Dealbreaker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dealbreaker</label>
    <type>Checkbox</type>
</CustomField>