force-app/main/default/objects/pstar__Preference_Option__c/fields/pstar__PO_Name__c.field-meta.xml
<CustomField>
    <fullName>pstar__PO_Name__c</fullName>
    <label>Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>