force-app/main/default/objects/pstar__Preference_Option__c/fields/pstar__Preference__c.field-meta.xml
<CustomField>
    <fullName>pstar__Preference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preference</label>
    <referenceTo>pstar__Preference__c</referenceTo>
    <relationshipLabel>Preference Options</relationshipLabel>
    <relationshipName>Preference_Options</relationshipName>
    <type>Lookup</type>
</CustomField>