force-app/main/default/objects/pstar__Preference_Option__c/fields/pstar__Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>pstar__Sort_Order__c</fullName>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>