force-app/main/default/objects/pstar__Preference_Option__c/fields/pstar__Status__c.field-meta.xml
<CustomField>
    <fullName>pstar__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>