force-app/main/default/objects/pstar__Preference_Option__c/fields/pstar__Strict_Match__c.field-meta.xml
<CustomField>
    <fullName>pstar__Strict_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Strict Match</label>
    <type>Checkbox</type>
</CustomField>