force-app/main/default/objects/pstar__Preference_Option__c/fields/pstar__Value__c.field-meta.xml
<CustomField>
    <fullName>pstar__Value__c</fullName>
    <label>Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>